--- a/catalog/view/theme/d_visualize/template/checkout/register.twig
+++ b/catalog/view/theme/d_visualize/template/checkout/register.twig
@@ -1,233 +1,263 @@
 <div class="row">
-  <div class="col-sm-6">
-    <fieldset id="account">
-      <legend>{{text_your_details}}</legend>
-      {% include 'd_visualize/template/component/d_account_field.twig' %}
-      {% for custom_field in custom_fields %}
-        {% if custom_field.location == 'account' %}
-          {% include 'd_visualize/template/component/d_custom_field.twig' with custom_field %}
+    <div class="col-sm-6">
+        <fieldset id="account">
+            <legend>{{ text_your_details }}</legend>
+            {% include partial.d_account_field.template with partial.d_account_field %}
+            {% for custom_field in custom_fields %}
+                {% if custom_field.location == 'account' %}
+                    {% include partial.d_custom_field.template with partial.d_custom_field|merge({custom_field:custom_field}) %}
+                {% endif %}
+            {% endfor %}
+        </fieldset>
+        <fieldset>
+            <legend>{{ text_your_password }}</legend>
+            {% include partial.form_group.template with partial.form_group|merge({
+            type:'password',
+            id:'input-password',
+            name:'password',
+            value:password,
+            placeholder:entry_password,
+            classes:'',
+            text_input:entry_password,
+            }) %}
+            {% include partial.form_group.template with partial.form_group|merge({
+            type:'password',
+            id:'input-confirm',
+            name:'confirm',
+            value:password,
+            placeholder:entry_confirm,
+            classes:'',
+            text_input:entry_confirm,
+            }) %}
+        </fieldset>
+    </div>
+    <div class="col-sm-6">
+        <fieldset id="address">
+            <legend>{{ text_your_address }}</legend>
+            {% include partial.d_address_field.template with partial.d_address_field %}
+            {% for custom_field in custom_fields %}
+                {% if custom_field.location == 'address' %}
+                    {% include partial.d_custom_field.template with partial.d_custom_field|merge({custom_field:custom_field}) %}
+                {% endif %}
+            {% endfor %}
+        </fieldset>
+
+        {{ captcha }}
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        {% include partial.input.template with partial.input|merge({
+        type:'checkbox',
+        id:'newsletter',
+        name:'newsletter',
+        value:1 ,
+        checked: newsletter,
+        text_input: entry_newsletter,
+        }) %}
+    </div>
+    <div class="col-12">
+    </div>
+    <div class="col-12">
+        {% if text_agree %}
+            <div class="buttons">
+                {% if shipping_required %}
+                    {% include partial.input.template with partial.input|merge({
+                    type:'checkbox',
+                    name:'shipping_address',
+                    value:1 ,
+                    checked: true,
+                    text_input: entry_shipping,
+                    }) %}
+                {% endif %}
+                <div class="pull-right">{{ text_agree }} &nbsp;
+                    {% include partial.input.template with partial.input|merge({
+                    type:'checkbox',
+                    name:'agree',
+                    value:1 ,
+                    checked: false,
+                    }) %}
+                    <input type="button" value="{{ button_continue }}" id="button-register"
+                           data-loading-text="{{ text_loading }}" class="btn d-vis btn-primary"/>
+                </div>
+            </div>
+        {% else %}
+            <div class="buttons clearfix">
+                <div class="pull-right">
+                    <input type="button" value="{{ button_continue }}" id="button-register"
+                           data-loading-text="{{ text_loading }}" class="btn d-vis btn-primary"/>
+                </div>
+            </div>
         {% endif %}
-      {% endfor %}
-    </fieldset>
-    <fieldset>
-      <legend>{{text_your_password}}</legend>
-      <div class="form-group required">
-        <label class="control-label" for="input-password">{{entry_password}}</label>
-        <input type="password" name="password" value="" placeholder="{{entry_password}}" id="input-password" class="form-control" />
-      </div>
-      <div class="form-group required">
-        <label class="control-label" for="input-confirm">{{entry_confirm}}</label>
-        <input type="password" name="confirm" value="" placeholder="{{entry_confirm}}" id="input-confirm" class="form-control" />
-      </div>
-    </fieldset>
-  </div>
-  <div class="col-sm-6">
-    <fieldset id="address">
-      <legend>{{text_your_address}}</legend>
-      {% include 'd_visualize/template/component/d_address_field.twig' %}
-      {% for custom_field in custom_fields %}
-        {% if custom_field.location == 'address' %}
-          {% include 'd_visualize/template/component/d_custom_field.twig' with custom_field %}
-        {% endif %}
-      {% endfor %}
-    </fieldset>
+    </div>
 
-    {{captcha}}
-  </div>
 </div>
-
-<div class="checkbox">
-  <label for="newsletter">
-    <input type="checkbox" name="newsletter" value="1" id="newsletter" />
-    {{entry_newsletter}}</label>
-</div>
-{% if shipping_required %}
-<div class="checkbox">
-  <label>
-    <input type="checkbox" name="shipping_address" value="1" checked="checked" />
-    {{entry_shipping}}</label>
-</div>
-{% endif %}
-{% if text_agree %}
-<div class="buttons clearfix">
-  <div class="pull-right">{{text_agree}} &nbsp;
-    <input type="checkbox" name="agree" value="1" />
-    <input type="button" value="{{button_continue}}" id="button-register" data-loading-text="{{text_loading}}" class="btn btn-primary" />
-  </div>
-</div>
-{% else %}
-<div class="buttons clearfix">
-  <div class="pull-right">
-    <input type="button" value="{{button_continue}}" id="button-register" data-loading-text="{{text_loading}}" class="btn btn-primary" />
-  </div>
-</div>
-{% endif %}
 
 
 <script type="text/javascript"><!--
-// Sort the custom fields
-$('#account .form-group[data-sort]').detach().each(function() {
-  if ($(this).attr('data-sort') >= 0 && $(this).attr('data-sort') <= $('#account .form-group').length) {
-    $('#account .form-group').eq($(this).attr('data-sort')).before(this);
-  }
+	// Sort the custom fields
+	$('#account .form-group[data-sort]').detach().each(function () {
+		if ($(this).attr('data-sort') >= 0 && $(this).attr('data-sort') <= $('#account .form-group').length) {
+			$('#account .form-group').eq($(this).attr('data-sort')).before(this);
+		}
 
-  if ($(this).attr('data-sort') > $('#account .form-group').length) {
-    $('#account .form-group:last').after(this);
-  }
+		if ($(this).attr('data-sort') > $('#account .form-group').length) {
+			$('#account .form-group:last').after(this);
+		}
 
-  if ($(this).attr('data-sort') < -$('#account .form-group').length) {
-    $('#account .form-group:first').before(this);
-  }
-});
+		if ($(this).attr('data-sort') < -$('#account .form-group').length) {
+			$('#account .form-group:first').before(this);
+		}
+	});
 
-$('#address .form-group[data-sort]').detach().each(function() {
-  if ($(this).attr('data-sort') >= 0 && $(this).attr('data-sort') <= $('#address .form-group').length) {
-    $('#address .form-group').eq($(this).attr('data-sort')).before(this);
-  }
+	$('#address .form-group[data-sort]').detach().each(function () {
+		if ($(this).attr('data-sort') >= 0 && $(this).attr('data-sort') <= $('#address .form-group').length) {
+			$('#address .form-group').eq($(this).attr('data-sort')).before(this);
+		}
 
-  if ($(this).attr('data-sort') > $('#address .form-group').length) {
-    $('#address .form-group:last').after(this);
-  }
+		if ($(this).attr('data-sort') > $('#address .form-group').length) {
+			$('#address .form-group:last').after(this);
+		}
 
-  if ($(this).attr('data-sort') < -$('#address .form-group').length) {
-    $('#address .form-group:first').before(this);
-  }
-});
+		if ($(this).attr('data-sort') < -$('#address .form-group').length) {
+			$('#address .form-group:first').before(this);
+		}
+	});
 
-$('#collapse-payment-address input[name=\'customer_group_id\']').on('change', function() {
-  $.ajax({
-    url: 'index.php?route=checkout/checkout/customfield&customer_group_id=' + this.value,
-    dataType: 'json',
-    success: function(json) {
-      $('#collapse-payment-address .custom-field').hide();
-      $('#collapse-payment-address .custom-field').removeClass('required');
+	$('#collapse-payment-address input[name=\'customer_group_id\']').on('change', function () {
+		$.ajax({
+			url: 'index.php?route=checkout/checkout/customfield&customer_group_id=' + this.value,
+			dataType: 'json',
+			success: function (json) {
+				$('#collapse-payment-address .custom-field').hide();
+				$('#collapse-payment-address .custom-field').removeClass('required');
 
-      for (i = 0; i < json.length; i++) {
-        custom_field = json[i];
+				for (i = 0; i < json.length; i++) {
+					custom_field = json[i];
 
-        $('#payment-custom-field' + custom_field['custom_field_id']).show();
+					$('#payment-custom-field' + custom_field['custom_field_id']).show();
 
-        if (custom_field['required']) {
-          $('#payment-custom-field' + custom_field['custom_field_id']).addClass('required');
-        }
-      }
-    },
-    error: function(xhr, ajaxOptions, thrownError) {
-      alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-    }
-  });
-});
+					if (custom_field['required']) {
+						$('#payment-custom-field' + custom_field['custom_field_id']).addClass('required');
+					}
+				}
+			},
+			error: function (xhr, ajaxOptions, thrownError) {
+				alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+			}
+		});
+	});
 
-$('#collapse-payment-address input[name=\'customer_group_id\']:checked').trigger('change');
-//--></script>
+	$('#collapse-payment-address input[name=\'customer_group_id\']:checked').trigger('change');
+	//--></script>
 <script type="text/javascript"><!--
-$('#collapse-payment-address button[id^=\'button-payment-custom-field\']').on('click', function() {
-  var node = this;
+	$('#collapse-payment-address button[id^=\'button-payment-custom-field\']').on('click', function () {
+		var node = this;
 
-  $('#form-upload').remove();
+		$('#form-upload').remove();
 
-  $('body').prepend('<form enctype="multipart/form-data" id="form-upload" style="display: none;"><input type="file" name="file" /></form>');
+		$('body').prepend('<form enctype="multipart/form-data" id="form-upload" style="display: none;"><input type="file" name="file" /></form>');
 
-  $('#form-upload input[name=\'file\']').trigger('click');
+		$('#form-upload input[name=\'file\']').trigger('click');
 
-  if (typeof timer != 'undefined') {
-      clearInterval(timer);
-  }
+		if (typeof timer != 'undefined') {
+			clearInterval(timer);
+		}
 
-  timer = setInterval(function() {
-    if ($('#form-upload input[name=\'file\']').val() != '') {
-      clearInterval(timer);
+		timer = setInterval(function () {
+			if ($('#form-upload input[name=\'file\']').val() != '') {
+				clearInterval(timer);
 
-      $.ajax({
-        url: 'index.php?route=tool/upload',
-        type: 'post',
-        dataType: 'json',
-        data: new FormData($('#form-upload')[0]),
-        cache: false,
-        contentType: false,
-        processData: false,
-        beforeSend: function() {
-          $(node).button('loading');
-        },
-        complete: function() {
-          $(node).button('reset');
-        },
-        success: function(json) {
-          $('.text-danger').remove();
+				$.ajax({
+					url: 'index.php?route=tool/upload',
+					type: 'post',
+					dataType: 'json',
+					data: new FormData($('#form-upload')[0]),
+					cache: false,
+					contentType: false,
+					processData: false,
+					beforeSend: function () {
+						$(node).button('loading');
+					},
+					complete: function () {
+						$(node).button('reset');
+					},
+					success: function (json) {
+						$('.text-danger').remove();
 
-          if (json['error']) {
-            $(node).parent().find('input[name^=\'custom_field\']').after('<div class="text-danger">' + json['error'] + '</div>');
-          }
+						if (json['error']) {
+							$(node).parent().find('input[name^=\'custom_field\']').after('<div class="text-danger">' + json['error'] + '</div>');
+						}
 
-          if (json['success']) {
-            alert(json['success']);
+						if (json['success']) {
+							alert(json['success']);
 
-            $(node).parent().find('input[name^=\'custom_field\']').attr('value', json['code']);
-          }
-        },
-        error: function(xhr, ajaxOptions, thrownError) {
-          alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-        }
-      });
-    }
-  }, 500);
-});
-//--></script>
+							$(node).parent().find('input[name^=\'custom_field\']').attr('value', json['code']);
+						}
+					},
+					error: function (xhr, ajaxOptions, thrownError) {
+						alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+					}
+				});
+			}
+		}, 500);
+	});
+	//--></script>
 <script type="text/javascript"><!--
-$('.date').datetimepicker({
-  pickTime: false
-});
+	$('.date').datetimepicker({
+		pickTime: false
+	});
 
-$('.time').datetimepicker({
-  pickDate: false
-});
+	$('.time').datetimepicker({
+		pickDate: false
+	});
 
-$('.datetime').datetimepicker({
-  pickDate: true,
-  pickTime: true
-});
-//--></script>
+	$('.datetime').datetimepicker({
+		pickDate: true,
+		pickTime: true
+	});
+	//--></script>
 <script type="text/javascript"><!--
-$('#collapse-payment-address select[name=\'country_id\']').on('change', function() {
-  $.ajax({
-    url: 'index.php?route=checkout/checkout/country&country_id=' + this.value,
-    dataType: 'json',
-    beforeSend: function() {
-      $('#collapse-payment-address select[name=\'country_id\']').after(' <i class="fa fa-circle-o-notch fa-spin"></i>');
-    },
-    complete: function() {
-      $('.fa-spin').remove();
-    },
-    success: function(json) {
-      if (json['postcode_required'] == '1') {
-        $('#collapse-payment-address input[name=\'postcode\']').parent().parent().addClass('required');
-      } else {
-        $('#collapse-payment-address input[name=\'postcode\']').parent().parent().removeClass('required');
-      }
+	$('#collapse-payment-address select[name=\'country_id\']').on('change', function () {
+		$.ajax({
+			url: 'index.php?route=checkout/checkout/country&country_id=' + this.value,
+			dataType: 'json',
+			beforeSend: function () {
+				$('#collapse-payment-address select[name=\'country_id\']').after(' <i class="fa fa-circle-o-notch fa-spin"></i>');
+			},
+			complete: function () {
+				$('.fa-spin').remove();
+			},
+			success: function (json) {
+				if (json['postcode_required'] == '1') {
+					$('#collapse-payment-address input[name=\'postcode\']').parent().parent().addClass('required');
+				} else {
+					$('#collapse-payment-address input[name=\'postcode\']').parent().parent().removeClass('required');
+				}
 
-      html = '<option value="">{{text_select}}</option>';
+				html = '<option value="">{{ text_select }}</option>';
 
-      if (json['zone'] && json['zone'] != '') {
-        for (i = 0; i < json['zone'].length; i++) {
-          html += '<option value="' + json['zone'][i]['zone_id'] + '"';
+				if (json['zone'] && json['zone'] != '') {
+					for (i = 0; i < json['zone'].length; i++) {
+						html += '<option value="' + json['zone'][i]['zone_id'] + '"';
 
-          if (json['zone'][i]['zone_id'] == '{{zone_id}}') {
-            html += ' selected="selected"';
-          }
+						if (json['zone'][i]['zone_id'] == '{{ zone_id }}') {
+							html += ' selected="selected"';
+						}
 
-          html += '>' + json['zone'][i]['name'] + '</option>';
-        }
-      } else {
-        html += '<option value="0" selected="selected">{{text_none}}; ?></option>';
-      }
+						html += '>' + json['zone'][i]['name'] + '</option>';
+					}
+				} else {
+					html += '<option value="0" selected="selected">{{ text_none }}; ?></option>';
+				}
 
-      $('#collapse-payment-address select[name=\'zone_id\']').html(html);
-    },
-    error: function(xhr, ajaxOptions, thrownError) {
-      alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-    }
-  });
-});
+				$('#collapse-payment-address select[name=\'zone_id\']').html(html);
+			},
+			error: function (xhr, ajaxOptions, thrownError) {
+				alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+			}
+		});
+	});
 
-$('#collapse-payment-address select[name=\'country_id\']').trigger('change');
-//--></script>
+	$('#collapse-payment-address select[name=\'country_id\']').trigger('change');
+	//--></script>
